# consumer-complaint-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: settings.yml
docs/plans/: 2026-03-06-scam-type-classifier-design.md  2026-03-06-scam-type-classifier.md
notebooks/: complaint_analysis.ipynb
src/complaint_pipeline/: __init__.py  cli.py  models.py
src/complaint_pipeline/analysis/: network.py  temporal.py
src/complaint_pipeline/cfpb/: analyzer.py  bnpl_signals.py  client.py  narrative.py  scam_signals.py
src/complaint_pipeline/fcc/: client.py
src/complaint_pipeline/ftc/: client.py
src/complaint_pipeline/reports/: markdown.py
src/complaint_pipeline/sec/: edgar.py
src/complaint_pipeline/wa_ag/: client.py
tests/: conftest.py  test_analyzer.py  test_bnpl_signals.py  test_cfpb_client.py  test_fcc_client.py  test_ftc_client.py  test_models.py  test_narrative.py  test_network.py  test_reports.py  test_scam_signals.py  test_temporal.py  test_wa_ag_client.py
tests/fixtures/: sample_cfpb_response.json
