[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "complaint-pipeline"
version = "0.1.0"
description = "Data pipeline for analyzing CFPB consumer complaints and SEC filings via public APIs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Brittney Erler" }]

dependencies = [
    "httpx>=0.27",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
complaint-pipeline = "complaint_pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/complaint_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
